# Interval

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
icl/: closed_interval.hpp  continuous_interval.hpp  discrete_interval.hpp  dynamic_interval_traits.hpp  functors.hpp  interval.hpp  interval_base_map.hpp  interval_base_set.hpp  interval_bounds.hpp  interval_combining_style.hpp  interval_map.hpp  interval_set.hpp  interval_traits.hpp  iterator.hpp  left_open_interval.hpp  map.hpp  open_interval.hpp  right_open_interval.hpp  separate_interval_set.hpp  split_interval_map.hpp  split_interval_set.hpp
icl/concept/: comparable.hpp  container.hpp  element_associator.hpp  element_map.hpp  element_set.hpp  interval.hpp  interval_associator.hpp  interval_associator_base.hpp  interval_bounds.hpp  interval_map.hpp  interval_set.hpp  interval_set_value.hpp  joinable.hpp  map_value.hpp  set_value.hpp
icl/detail/: associated_value.hpp  element_comparer.hpp  element_iterator.hpp  exclusive_less_than.hpp  interval_map_algo.hpp  interval_set_algo.hpp  interval_subset_comparer.hpp  map_algo.hpp  mapped_reference.hpp  on_absorbtion.hpp  relation_state.hpp  set_algo.hpp  subset_comparer.hpp
icl/type_traits/: absorbs_identities.hpp  codomain_type_of.hpp  difference_type_of.hpp  domain_type_of.hpp  element_type_of.hpp  has_inverse.hpp  has_set_semantics.hpp  identity_element.hpp  infinity.hpp  interval_type_default.hpp  interval_type_of.hpp  size.hpp  (+31 more)
test/: CMakeLists.txt  test_custom_interval.cpp  test_example.cpp  test_overlap_counter.cpp  test_std_copy.cpp  test_std_transform.cpp
